--- a/roelof.html
+++ b/roelof.html
@@ -33,9 +33,9 @@
             </button>
         </div>
        <div class="social">
-            <ion-icon name="logo-facebook"></ion-icon>
-            <ion-icon name="logo-twitter"></ion-icon>
-            <ion-icon name="logo-instagram"></ion-icon>
+            <ion-icon class="icon" name="logo-facebook"></ion-icon>
+            <ion-icon class="icon" name="logo-twitter"></ion-icon>
+            <ion-icon class="icon" name="logo-instagram"></ion-icon>
      
        </div>
     </div>
