--- a/roelof.html
+++ b/roelof.html
@@ -17,21 +17,25 @@
         <div class="logo">
             <img src="./images/logo.svg">
         </div>
-        <div class="image">
-            <img src="./images/illustration-mockups.svg">
-        </div>
-        <h2>
-            Build The Community Your Fans Will Love
-        </h2>
-        <p>
-            Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-            Create connections with your users as you engage in genuine discussion. 
-        </p>
-        <div class="button-div">
-            <button>
-                Register
-            </button>
-        </div>
+        <div class="body">
+            <div class="image">
+                <img src="./images/illustration-mockups.svg">
+            </div>
+            <div class="action">
+                <h2>
+                    Build The Community Your Fans Will Love
+                </h2>
+                <p>
+                    Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+                    Create connections with your users as you engage in genuine discussion. 
+                </p>
+                <div class="button-div">
+                    <button>
+                        Register
+                    </button>
+                </div>
+            </div>
+        </div>       
        <div class="social">
             <ion-icon class="icon" name="logo-facebook"></ion-icon>
             <ion-icon class="icon" name="logo-twitter"></ion-icon>
